# FundScope

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: project_status.md
docs/guides/: architecture.md  development.md  quickstart.md
docs/superpowers/plans/: 2026-03-21-akshare-data-integration.md  2026-03-21-backtest-engine-implementation.md  2026-03-21-fundscope-mvp-implementation.md  2026-03-22-composite-strategy.md  2026-03-22-portfolio-rebalance.md  2026-03-22-portfolio-to-virtual-account.md  2026-03-22-strategy-explanation-panel.md
docs/superpowers/research/: akshare-api-reference.md
docs/superpowers/specs/: 2026-03-21-fundscope-design.md  (+4 more)
domain/backtest/: __init__.py  engine.py  models.py
domain/fund/: classifier.py  metrics.py  models.py  scorer.py
domain/portfolio/: analyzer.py  models.py
domain/simulation/: account.py  models.py
infrastructure/datasource/: abstract.py  akshare_source.py  cache.py  raw_cache.py  validator.py
infrastructure/importer/: csv_importer.py
infrastructure/storage/: parquet_store.py  sqlite_store.py
service/: backtest_service.py  fund_service.py  portfolio_service.py  simulation_service.py
shared/: __init__.py  config.py  logger.py
tests/infrastructure/: test_akshare_source.py  test_cache.py  test_datasource.py  test_storage.py  test_validator.py
tests/service/: test_backtest_service.py  test_fund_service.py  test_fund_service_parquet.py  test_portfolio_service.py  test_simulation_service.py
ui/: app.py
ui/pages/: 1_fund_research.py  2_portfolio.py  3_strategy_lab.py
(+34 files in other folders)
