[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundscope"
version = "0.1.0"
description = "数据驱动 + 策略可验证 + 决策可解释 的基金投资系统"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["domain", "service", "shared", "infrastructure", "ui"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
